# px-plus

./: .dockerignore  .env.sample  .gcloudignore  .gitignore  DEPLOYMENT.md  Dockerfile  E2E_TEST_REPORT.md  Makefile  README.md  SSL_FIX_FINAL_REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  test_fallback_chain.py  test_web_enhancement.json  test_web_enhancement_e2e.py
config/: env-vars-production.txt
docs/: 04-logging-guide.md  GEMINI_SDK_CERTIFICATE_FLOW.md  SERVER_LOGS.md  SSL_CERTIFICATE_FIX.md  api-routing-analysis.md  demo-page-guide.md  demo-page-test-report.md  deployment-guide.md  document_extraction_process.md  file-upload-validation.md  gemini-sdk-migration-guide.md
docs/demo/: term-extraction-demo-guide.md
docs/design/: markdown-demo-page-design.md
docs/design/openai-abstraction/: 01-architecture.md  02-domain-layer.md  03-application-layer.md  05-api-spec.md  (+2 more)
docs/testing/: term-extraction-test-report.md
ext/: architecture.md
progress/: 00-web-enhancement-overview.md  01-gemini-adapter-pattern.md  02-domain-infrastructure-layers.md  03-application-presentation-layers.md  04-deployment-guide.md  README.md
rules/: 01-result-pattern.md  03-code-style.md  07-testing-patterns.md  18-version-control-safeguard-process.md
sample/: chinese.txt  english.txt  japanese.txt  korean.txt  long_data.json  long_document.docx  long_markdown.md  long_presentation.pptx  long_sheet.xlsx  long_text.txt  sample_1.json  sample_term.json  sample_web.json  term-extraction-test-cases.json  text-extractor_sample.json
scripts/: deploy-with-env-vars.sh  env-to-yaml.py  setup-secrets.sh
src/: main.py
src/application/: __init__.py  dto.py  use_cases.py
src/domain/: __init__.py  entities.py  services.py
src/infrastructure/: __init__.py  registry.py
src/shared/: config.py
static/: demo-index.html  demo-upload.html  markdown-table-demo.html  term-extraction-demo.html  web-enhancement-demo.html
(+124 files in other folders)
